@@ -1,3 +1,11 @@
+2007-12-13  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/moduleset.py, jhbuild/versioncontrol/__init__.py,
+	jhbuild/versioncontrol/tarball.py: sync patch lookup features from
+	tarball modtype to versioncontrol tarball; possibility to specify
+	a full URL for patch files, or looking it up in moduleset directory
+	or in a patches/ subdirectory of that one.
+
 2007-12-12  William Jon McCann  <mccann@jhu.edu>
 
 	* modulesets/gnome-suites-2.22.modules: Suggest libnotify for
